--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -87,7 +87,7 @@
         <h2>로그인</h2>
         <section>
             <!--form-->
-            <form method="post" action="" th:action id="login-form">
+            <form method="post" action="" th:action="@{/auth/login}" id="login-form">
                 <input type="text" name="userEmail" placeholder="이메일">
                 <input type="password" name="userPassword" placeholder="비밀번호">
                 <label for="remember-check">
