--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <title>index.html</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Top Navigation Bar</title>
+    <link rel="stylesheet" th:href="@{/css/main.css}" href="main.css" type="text/css"/>
 </head>
-<body>
+<nav class="navbar" >
+    <ul class="nav-content">
+        <!-- Logo -->
+        <li class="logo">MyWebsite</li>
 
-<h1>메인화면</h1>
+        <!-- Search Bar -->
+        <li class="search">
+            <input type="text" placeholder="Search...">
+        </li>
 
-</body>
+        <!-- Actions: Login & My Page -->
+        <li class="actions">
+            <button class="login-btn"  onclick="location.href='/auth/login'">로그인</button>
+            <button class="register-btn" onclick="location.href='/auth/register'">회원가입</button>
+        </li>
+    </ul>
+</nav>
 </html>
