--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -94,8 +94,8 @@
                     </script>
                 </div>
 
-                <input type="text" name="userEmail" placeholder="이메일">
-                <input type="password" name="userPassword" placeholder="비밀번호">
+                <input type="text" name="username" placeholder="이메일">
+                <input type="password" name="password" placeholder="비밀번호">
                 <label for="remember-check">
                     <input type="checkbox" id="remember-check">아이디 저장하기
                 </label>
