--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -18,6 +18,7 @@
         <li class="actions">
             <button class="login-btn"  onclick="location.href='/auth/login'" sec:authorize="isAnonymous()">로그인</button>
             <button class="login-btn"  onclick="location.href='/auth/logout'" sec:authorize="isAuthenticated()">로그아웃</button>
+            <button class="myBook"  onclick="location.href='/myBook'" sec:authorize="isAuthenticated()">내 서재</button>
             <button class="register-btn" onclick="location.href='/auth/register'" sec:authorize="isAnonymous()">회원가입</button>
         </li>
     </ul>
