--- a/src/main/resources/templates/myBook.html
+++ b/src/main/resources/templates/myBook.html
@@ -14,7 +14,7 @@
     }
     .container {
       max-width: 100%;
-      margin-top: 10px;
+      margin-top: 85px;
       background: #fff;
     }
     .toggle-btn {
@@ -46,7 +46,7 @@
         justify-content: flex-start;
         width:120px;
         padding: 5px;
-        height: 200px;
+        height: 220px;
         background-color: #fff;
         overflow: hidden;
         transition: transform 0.2s, box-shadow 0.2s;
@@ -89,8 +89,10 @@
         <!-- Thymeleaf 반복: readingBooks 리스트 -->
         <div class="card" th:each="book : ${bookList}" th:if="${book.bookStatus == T(com.book_service.personal_book_project.domain.BookStatus).READING}">
             <!-- 카드 내용 -->
+            <a th:href="@{/myBook/content/{isbn}(isbn=${book.isbn})}">
             <img th:src="${book.cover}" alt="책 표지">
             <div class="card-title" th:text="${book.title}">제목</div>
+            </a>
         </div>
     </div>
 
@@ -100,8 +102,10 @@
         <!-- Thymeleaf 반복: doneBooks 리스트 -->
         <div class="card" th:each="book : ${bookList}" th:if="${book.bookStatus == T(com.book_service.personal_book_project.domain.BookStatus).DONE}">
             <!-- 카드 내용 -->
+            <a th:href="@{/myBook/content/{isbn}(isbn=${book.isbn})}">
             <img th:src="${book.cover}" alt="책 표지">
             <div class="card-title" th:text="${book.title}">제목</div>
+            </a>
         </div>
     </div>
 </div>
